# pyri-variable-storage

./: README.md  pyproject.toml  setup.py
src/pyri/variable_storage/: __main__.py  factory.py  models.py  pyri_variable_storage_default_info.yml  robdef.py  service_node_launch.py  storage.py  tech.pyri.variable_storage.robdef
test/: test_init_db.py  test_storage_object.py
