[project]

name = "pyri-variable-storage"
version = "0.2.0"
description = "PyRI Teach Pendant Variables Database"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pyodide", "pyri-project", "pyri-runtime-package", "robotics"]
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    'pyri-common',
    'sqlalchemy'   
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
homepage="http://pyri.tech"
repository="https://github.com/pyri-project/pyri-variable-storage"

[project.scripts]
pyri-variable-storage-service = "pyri.variable_storage.__main__:main"

[project.entry-points."pyri.plugins.robdef"]
pyri-variable-storage-robdef = "pyri.variable_storage.robdef:get_robdef_factory"

[project.entry-points."pyri.plugins.service_node_launch"]
pyri-variable-storage-launch = "pyri.variable_storage.service_node_launch:get_service_node_launch_factory"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]